# On-Battery-Notifier

./: LICENSE  app.py  batteryThread.py  build.py  config.py  data.py  dialogs.py  pyproject.toml  state.py
.github/: build.py
.github/workflows/: build.yml
icon/: convertSVG  fileToStr.py  icon.py
src/: batteryThread.py  config.py  data.py  dialogs.py  state.py
