[tool.poetry]
name = "On Battery Notifier"
version = "0.1.1"
description = "Sends tray notifications when system is not plugged to an AC Source i.e. running on a battery source."
authors = ["Gurjit Singh <g.s@outlook.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.10,<3.11"
pystray = "^0.19.4"
psutil = "^5.9.1"
easygui = "^0.98.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"
Nuitka = "^0.9.5"
flake8 = "^4.0.1"
black = "^22.12.0"
types-psutil = "^5.8.22"
zstandard = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
